Update index.html with new content and structure

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,17 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home | Good Trips Rafting</title>
-    <meta name="description" content="Experience the thrill of water rafting with Good Trips.">
+    <meta name="description" content="Good Trips Rafting offers the best white water rafting adventures in Zimbabwe. Book your trip today!">
     <meta name="author" content="Tanatswa Mbewe">
-    <link rel="stylesheet" href="styles/rafting.css">
+    <title>Home | Good Trips Rafting</title>
+    <link rel="stylesheet" href="rafting.css">
 </head>
 <body>
     <header>
-        <div class="logo">
-            <img src="images/z-raftingcompas.jpg" alt="Rafting Site Logo">
-        </div>
-        <h1>Good Trips Rafting</h1>
+        <img srstylesheetstyle00.jpg" alt="Good Trips Rafting Logo">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -25,58 +22,62 @@
     </header>
 
     <main>
-        <!-- Hero Image Section -->
         <div class="hero">
-            <img src="images/rafting_banner.jpg" alt="Rafting boat on river">
-            <div class="hero-msg">
-                <h1>Life is a Journey</h1>
-                <p>Make the most of it with an adventure of a lifetime.</p>
-            </div>
+            <img src="images/style01.jpg" alt="Rafting boat hitting a large rapid">
+            <h1>Experience the Thrill of a Lifetime</h1>
+            
+            <article>
+                <img src="images/style2.jpg" alt="Happy client smiling">
+                <p>
+                    Join us for an unforgettable adventure on the wildest rivers in Zimbabwe. 
+                    Safety, fun, and adrenaline guaranteed!
+                </p>
+                <a href="trips.html" class="cta-button">Book Your Trip Now</a>
+            </article>
         </div>
 
-        <!-- Call to Action Section -->
-        <section class="call-to-action">
-            <h2>Ready for the Adventure?</h2>
-            <p>Join us for the upcoming season and experience the rush.</p>
-            <a href="trips.html" class="cta-btn">View Our Trips</a>
-        </section>
-
-        <!-- Content Grid Section -->
-        <section class="home-grid">
-            <div class="grid-item">
-                <img src="images/rapids.jpg" alt="Raft hitting rapids">
-                <h3>Thrill Seekers</h3>
-                <p>For those who love the adrenaline rush, our Class IV and V rapids will test your limits and provide an unforgettable experience.</p>
-            </div>
-            <div class="grid-item">
-                <img src="images/scenic.jpg" alt="Calm river view">
-                <h3>Scenic Views</h3>
-                <p>Not just about the rush, our trips take you through some of the most beautiful, untouched canyons in the country.</p>
-            </div>
-        </section>
-
-        <!-- Newsletter Signup -->
         <section class="newsletter">
-            <h3>Subscribe to our Newsletter</h3>
+            <h2>Join Our Newsletter</h2>
+            <p>Get the latest updates and special discounts straight to your inbox.</p>
             <form action="#" method="get">
-                <div class="newsletter-grid">
-                    <input type="text" name="name" placeholder="Name" required>
-                    <input type="email" name="email" placeholder="Email" required>
-                    <button type="submit">Sign Up</button>
+                <div class="form-group">
+                    <label for="news-name">Name:</label>
+                    <input type="text" id="news-name" name="name" required placeholder="Jane Doe">
                 </div>
+                <div class="form-group">
+                    <label for="news-email">Email:</label>
+                    <input type="email" id="news-email" name="email" required placeholder="jane@example.com">
+                </div>
+                <button type="submit">Subscribe</button>
             </form>
+        </section>
+
+        <section class="home-grid">
+            <h2>Why Choose Good Trips?</h2>
+            
+            <div class="grid-item">
+                <img src="images/style3.jpg" alt="Guide checking life jacket">
+                <h3>Expert Safety</h3>
+                <p>Our guides are certified professionals with over 10 years of experience on the water. Your safety is our #1 priority.</p>
+            </div>
+
+            <div class="grid-item">
+                <img src="images/scenery.jpg" alt="Beautiful river canyon view">
+                <h3>Stunning Scenery</h3>
+                <p>Raft through the breathtaking gorges of Gweru. We take you to places you can't reach by foot or car.</p>
+            </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2025 Good Trips Rafting</p>
-        <p><a href="site-plan.html">Site Plan</a></p>
-        <div class="sociallinks">
-            <a href="https://facebook.com"><img src="images/facebook.png" alt="Facebook"></a>
-            <a href="https://twitter.com"><img src="images/twitter.png" alt="Twitter"></a>
-            <a href="https://instagram.com"><img src="images/instagram.png" alt="Instagram"></a>
-        </div>
+        <p>©2025 Good Trips Rafting | Tanatswa Mbewe</p>
+        <nav class="socialmedia">
+            <ul>
+                <li><a href="https://facebook.com"><img src="images/facebook.svg" alt="Facebook"></a></li>
+                <li><a href="https://linkedin.com"><img src="images/linkedin.svg" alt="LinkedIn"></a></li>
+                <li><a href="https://instagram.com"><img src="images/instagram.svg" alt="Instagram"></a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
-
