Fix image source attribute in index.html

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img srstylesheetstyle00.jpg" alt="Good Trips Rafting Logo">
+        <img src=image" alt="Good Trips Rafting Logo">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
