Update image sources in index.html

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src=image" alt="Good Trips Rafting Logo">
+        <img src="images/z-raftingcompas.jpg" alt="Good Trips Rafting Logo">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -23,7 +23,7 @@
 
     <main>
         <div class="hero">
-            <img src="images/style01.jpg" alt="Rafting boat hitting a large rapid">
+            <img src="images/rafting_banner.jpg" alt="Rafting boat hitting a large rapid">
             <h1>Experience the Thrill of a Lifetime</h1>
             
             <article>
