Update image source for client in index.html

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -27,7 +27,7 @@
             <h1>Experience the Thrill of a Lifetime</h1>
             
             <article>
-                <img src="images/style2.jpg" alt="Happy client smiling">
+                <img src="images/employee1.jpg" alt="Happy client smiling">
                 <p>
                     Join us for an unforgettable adventure on the wildest rivers in Zimbabwe. 
                     Safety, fun, and adrenaline guaranteed!
