Update image sources in index.html

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -27,7 +27,7 @@
             <h1>Experience the Thrill of a Lifetime</h1>
             
             <article>
-                <img src="images/employee1.jpg" alt="Happy client smiling">
+                <img src="images/rafting_small.jpg" alt="Happy client smiling">
                 <p>
                     Join us for an unforgettable adventure on the wildest rivers in Zimbabwe. 
                     Safety, fun, and adrenaline guaranteed!
@@ -56,13 +56,13 @@
             <h2>Why Choose Good Trips?</h2>
             
             <div class="grid-item">
-                <img src="images/style3.jpg" alt="Guide checking life jacket">
+                <img src="images/employee1.jpeg" alt="Guide checking life jacket">
                 <h3>Expert Safety</h3>
                 <p>Our guides are certified professionals with over 10 years of experience on the water. Your safety is our #1 priority.</p>
             </div>
 
             <div class="grid-item">
-                <img src="images/scenery.jpg" alt="Beautiful river canyon view">
+                <img src="images/employee2.jpeg" alt="Beautiful river canyon view">
                 <h3>Stunning Scenery</h3>
                 <p>Raft through the breathtaking gorges of Gweru. We take you to places you can't reach by foot or car.</p>
             </div>
