Update social media icons to black and white

--- a/wwr/index.html
+++ b/wwr/index.html
@@ -73,9 +73,9 @@
         <p>©2025 Good Trips Rafting | Tanatswa Mbewe</p>
         <nav class="socialmedia">
             <ul>
-                <li><a href="https://facebook.com"><img src="images/facebook.svg" alt="Facebook"></a></li>
-                <li><a href="https://linkedin.com"><img src="images/linkedin.svg" alt="LinkedIn"></a></li>
-                <li><a href="https://instagram.com"><img src="images/instagram.svg" alt="Instagram"></a></li>
+                <li><a href="https://facebook.com"><img src="images/facebook-bw.svg" alt="Facebook"></a></li>
+                <li><a href="https://linkedin.com"><img src="images/linkedin-bw.svg" alt="LinkedIn"></a></li>
+                <li><a href="https://instagram.com"><img src="images/instagram-bw.svg" alt="Instagram"></a></li>
             </ul>
         </nav>
     </footer>
