--- a/wwr/index.html
+++ b/wwr/index.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Good Trips Rafting offers the best white water rafting adventures in Zimbabwe. Book your trip today!">
     <meta name="author" content="Tanatswa Mbewe">
     <title>Home | Good Trips Rafting</title>
-    <link rel="stylesheet" href="rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header>
