--- a/wwr/about.html
+++ b/wwr/about.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Experience heart-pounding white water rafting with Good Trips! Tackle the best rapids with our expert guides.">
     <meta name="author" content="Tanatswa Mbewe.">
     <title>About Us | Good Trips Rafting </title>
-    <link rel="stylesheet" href="rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header>
