--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Choose your rafting adventure. We offer half-day, full-day, and multi-day trips on the best rapids in Zimbabwe.">
     <meta name="author" content="Tanatswa Mbewe">
     <title>Our Trips | Good Trips Rafting</title>
-    <link rel="stylesheet" href="rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header>
