--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -6,7 +6,7 @@
     <meta name="description" content="Contact Good Trips Rafting to book your next adventure. Reach out for reservations, questions, or website suggestions.">
     <meta name="author" content="Tanatswa Mbewe">
     <title>Contact Us | Good Trips Rafting</title>
-    <link rel="stylesheet" href="rafting.css">
+    <link rel="stylesheet" href="styles/rafting.css">
 </head>
 <body>
     <header>
