--- a/wwr/about.html
+++ b/wwr/about.html
@@ -24,10 +24,10 @@
 
     <main>
         <div class="hero">
-          <img src="images/style01.jpg" alt="people Rafting">
+          <img src="images/z-raftingcompas.jpg" alt="people Rafting">
           <h1>Good Trips Rafting</h1>
           <article>
-            <img src="images/style2.jpg" alt="rafting image">
+            <img src="images/rafting_banner.jpg" alt="rafting image">
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor
             incididunt ut labore et dolore magna aliqua," and it is used to simulate the visual form of text without the distraction of 
             actual readable content. Lorem ipsum helps designers and typographers evaluate visual design without relying on meaningful text 
