--- a/wwr/contact.html
+++ b/wwr/contact.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="images/style00.jpg" alt="Good Trips logo">
+        <img src="images/z-raftingcompas.jpg" alt="Good Trips logo">
         <nav>
           <ul>
             <li><a href="index.html">Home</a></li>
@@ -73,15 +73,15 @@
             <h2>We Are Here to Serve You</h2>
             <div class="employee-row">
                 <figure>
-                    <img src="images/employee1.jpg" alt="Tinashe">
+                    <img src="images/employee1.jpeg" alt="Tinashe">
                     <figcaption>Tinashe - Lead Guide</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/employee2.jpg" alt="Sarah">
+                    <img src="images/employee2.jpeg" alt="Sarah">
                     <figcaption>Sarah - Safety Officer</figcaption>
                 </figure>
                 <figure>
-                    <img src="images/employee3.jpg" alt="David">
+                    <img src="images/employee3.jpeg" alt="David">
                     <figcaption>David - Operations</figcaption>
                 </figure>
             </div>
