--- a/wwr/trips.html
+++ b/wwr/trips.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <img src="images/logo.png" alt="Good Trips Rafting Logo">
+        <img src="images/z-raftingcompas.jpg" alt="Good Trips Rafting Logo">
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
@@ -31,19 +31,19 @@
         <section class="trip-grid">
             
             <div class="trip-card">
-                <img src="images/trip-halfday.jpg" alt="Raft hitting a splash">
+                <img src="images/employee4.jpeg" alt="Raft hitting a splash">
                 <h2>The Splash & Dash (Half Day)</h2>
                 <p>Perfect for beginners or those short on time. This 3-hour trip covers the first 10 rapids. Great for families and first-timers wanting a taste of the action.</p>
             </div>
 
             <div class="trip-card">
-                <img src="images/trip-fullday.jpg" alt="Raft going down a waterfall">
+                <img src="images/employee1.jpeg" alt="Raft going down a waterfall">
                 <h2>The Big One (Full Day)</h2>
                 <p>Our most popular trip! conquer 25 km of intense Class IV and V rapids. Lunch is served by the riverbank. This is the ultimate adrenaline experience.</p>
             </div>
 
             <div class="trip-card">
-                <img src="images/trip-multiday.jpg" alt="Camping by the river">
+                <img src="images/employee3.jpeg" alt="Camping by the river">
                 <h2>The River Expedition (3 Days)</h2>
                 <p>Escape civilization completely. Sleep under the stars, fish for tigerfish, and raft the entire canyon. Includes all meals, camping gear, and expert guides.</p>
             </div>
@@ -88,9 +88,9 @@
         <p>©2025 Good Trips Rafting | Tanatswa Mbewe</p>
         <nav class="socialmedia">
             <ul>
-                <li><a href="https://facebook.com"><img src="images/facebook.svg" alt="Facebook"></a></li>
-                <li><a href="https://linkedin.com"><img src="images/linkedin.svg" alt="LinkedIn"></a></li>
-                <li><a href="https://instagram.com"><img src="images/instagram.svg" alt="Instagram"></a></li>
+                <li><a href="https://facebook.com"><img src="images/facebook-bw.svg" alt="Facebook"></a></li>
+                <li><a href="https://linkedin.com"><img src="images/linkedin-bw.svg" alt="LinkedIn"></a></li>
+                <li><a href="https://instagram.com"><img src="images/instagram-bw.svg" alt="Instagram"></a></li>
             </ul>
         </nav>
     </footer>
