--- a/wwr/about.html
+++ b/wwr/about.html
@@ -24,7 +24,7 @@
 
     <main>
         <div class="hero">
-          <img src="rafting_banner.jpg" alt="people Rafting">
+          <img src="images/rafting_banner.jpg" alt="people Rafting">
           <h1>Good Trips Rafting</h1>
           <article>
             <img src="images/rafting_small.jpg" alt="rafting image">
